clusters/harmen-rpi-ssd/apps/zwavejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwavejs
  namespace: zwavejs
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zwavejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zwavejs
    spec:
      nodeSelector:
        kubernetes.io/hostname: harmen-rpi-ssd
      containers:
        - name: zwavejs
          image: ghcr.io/zwave-js/zwave-js-ui:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              httpHeaders:
              - name: Accept
                value: text/plain
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: websocket
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "1"
              memory: 400Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: zwave-data
              mountPath: /usr/src/app/store
            - name: zwave-usb
              mountPath: /dev/zwave
            - name: zwave-config
              mountPath: /usr/src/app/store/settings.json
              subPath: settings.json
      volumes:
        - name: zwave-data
          persistentVolumeClaim:
            claimName: zwavejs-data
        - name: zwave-config
          configMap:
            name: zwavejs-settings
        - name: zwave-usb
          hostPath:
            path: "/dev/serial/by-id/usb-0658_0200-if00"
            type: CharDevice
