clusters/harmen-rpi-ssd/apps/zwavejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwavejs
  namespace: zwavejs
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: websocket
      port: 3000
      targetPort: websocket
  selector:
    app: zwavejs
